<resources>
    <string name="app_name">eShop</string>
    <string name="Name">eShop</string>
    <string name="moto">Makes Things Easy</string>
    <string name="Alredy">Already have an Account?  Login</string>
    <string name="join">Join Now</string>
    <string name="phoneNum">Phone Number</string>
    <string name="password">Password</string>
    <string name="remember">Remember me</string>
    <string name="fotgetpw">Forget Password ?</string>
    <string name="login">Login</string>
    <string name="admin">Admin</string>
    <string name="admin2">Not Admin</string>
    <string name="register">Create Account</string>
    <string name="EnterName">Enter Your Name</string>
    <string name="ProName">Product Name</string>
    <string name="Discriptin">Product Description</string>
    <string name="ProPrice">Product Price</string>
    <string name="addPro">Add Product</string>
    <string name="AddNewPro">Add New Product</string>
    <string name="sellerBegin">Seller Account</string>
    <string name="sellerLoginBegin">Seller Login</string>
    <string name="nameInput">Seller name</string>
    <string name="phoneInput">Seller phone</string>
    <string name="passwordInput">Seller password</string>
    <string name="addressInput">Seller address</string>
    <string name="totalPrice">Total Price </string>
    <string name="next">Next </string>
    <string name="productQuantity">Product Quantity</string>

    <string name="productPrice">Product Price</string>

    <string name="unverify">My Products</string>
    <string name="proState">Product Status</string>
    <string name="appMoto">THE BEST WAY OF SHOPPING...</string>


    <string name="sellerLogout">Logout</string>
    <string name="sellerAdd">Add New Product</string>
    <string name="adminManage">Manage Product</string>
    <string name="newOrderChek">Check new Order</string>
    <string name="newOrderChekadAprov">Check and Approve new Product</string>
    <string name="addCart">Add To Cart</string>
    <string name="welcomeadmin">Welcome Admin</string>
    <string name="Approve_new_Product">Approve new Product</string>

    <string name="proName">Product Name</string>
    <string name="close">Close</string>
    <string name="update">Update</string>
    <string name="changePro">Change Profile</string>
    <string name="address">Enter Your Address</string>

    <string name="cart">Cart</string>
    <string name="category">Categories</string>
    <string name="setting">Settings</string>
    <string name="order">Orders</string>
    <string name="logout">Logout</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="title_activity_seller_home">SellerHomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="apply_changes_btn">Apply Changes</string>
    <string name="maintain_product_name">Product Name</string>
    <string name="maintain_product_price">Product Price</string>
    <string name="maintain_product_description">Product Description</string>
    <string name="admin_new_orders">New Orders</string>
    <string name="order_user_name">User Name</string>
    <string name="order_phone_number">Phone Number</string>
    <string name="order_total_price">Total Price</string>
    <string name="order_address">Address, City</string>
    <string name="order_datetime">Date Time</string>
    <string name="user_products">Products</string>
    <string name="title_activity_seller__home">Seller_Home</string>

</resources>
