<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminHome">

    <TextView
        android:id="@+id/admin_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcomeadmin"
        android:textAlignment="center"
        android:textSize="18dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/admin_maintain_product"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_below="@+id/admin_welcome"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttons"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:text="@string/adminManage"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/admin_cheak_new"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_below="@+id/admin_maintain_product"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttons"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:text="@string/newOrderChek"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/admin_logout"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttons"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:text="@string/sellerLogout"
        android:textColor="@android:color/white"/>

</RelativeLayout>