<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/order_user_name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/order_user_name"
            android:textColor="@android:color/white"
            android:textSize="14dp"
            android:layout_marginLeft="5dp"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:id="@+id/order_phone_number"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/order_phone_number"
            android:textColor="@android:color/white"
            android:textSize="14dp"
            android:layout_marginLeft="5dp"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="2dp"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:id="@+id/order_total_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_total_price"
            android:textColor="@android:color/white"
            android:textSize="14dp"
            android:textStyle="bold"
            android:layout_below="@+id/cart_product_quantity"
            android:gravity="center"
            android:layout_marginTop="25dp">
        </TextView>

        <TextView
            android:id="@+id/order_address_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_address"
            android:textColor="@android:color/white"
            android:textSize="14dp"
            android:textStyle="bold"
            android:layout_below="@+id/order_total_price"
            android:gravity="center"
            android:layout_marginTop="10dp">
        </TextView>

        <TextView
            android:id="@+id/order_date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_datetime"
            android:textColor="@android:color/white"
            android:textSize="14dp"
            android:textStyle="bold"
            android:layout_below="@+id/order_address_city"
            android:gravity="center"
            android:layout_marginTop="10dp">
        </TextView>

        <Button
            android:id="@+id/show_all_products_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="Show this order product"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:background="@android:color/white"
            android:layout_below="@+id/order_date_time"/>

    </RelativeLayout>

</RelativeLayout>