<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminAddNewProduct">

    <ImageView
        android:id="@+id/select_product_image"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:src="@drawable/select_product_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"/>

    <EditText
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/select_product_image"
        android:inputType="textMultiLine"
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:hint="@string/ProName"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/input_design" />

    <EditText
        android:id="@+id/product_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_name"
        android:inputType="textMultiLine"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:hint="@string/Discriptin"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/input_design" />

    <EditText
        android:id="@+id/product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_description"
        android:inputType="textMultiLine"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:hint="@string/ProPrice"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/input_design" />

    <Button
        android:id="@+id/add_new_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_price"
        android:text="@string/addPro"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:padding="17dp"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@drawable/buttons"/>

</RelativeLayout>