<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Product_Details">

    <ImageView
        android:id="@+id/product_image_details"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/product_name_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_image_details"
        android:text="@string/ProName"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/product_description_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_name_details"
        android:text="@string/Discriptin"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/product_price_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_description_details"
        android:text="@string/ProPrice"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="10dp"/>

    <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
        android:id="@+id/number_btn"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:elevation="6dp"
        app:textSize="12dp"
        app:initialNumber="1"
        app:finalNumber="10"
        android:gravity="center"
        android:layout_below="@+id/product_price_details"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true">
    </com.cepheuen.elegantnumberbutton.view.ElegantNumberButton>

    <Button
        android:id="@+id/pd_add_to_cat_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:layout_margin="15dp"
        android:layout_alignParentBottom="true"
        android:text="@string/addCart"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"/>



</RelativeLayout>