<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".Register">

    <ImageView
        android:id="@+id/register_applogo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:src="@drawable/app_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        />
    <EditText
        android:id="@+id/register_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_applogo"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:hint="@string/EnterName"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHint="@color/inputHint"
        android:textSize="17sp"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/register_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_name_input"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/phoneNum"
        android:inputType="phone"
        android:textColor="@android:color/white"
        android:textColorHint="@color/inputHint"
        android:textSize="17sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/register_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_phone_number"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="6dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@color/inputHint"
        android:textSize="17sp"
        android:textStyle="bold"
        />


    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_password_input"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttons"
        android:padding="20dp"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:text="@string/register"
        android:textColor="@android:color/white"/>




</RelativeLayout>