<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    app:cardElevation="15dp"
    tools:context=".AdminMaintainProducts">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/product_image_maintain"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/product_name"
            android:scaleType="centerCrop"
            android:layout_marginTop="2dp" />

        <EditText
            android:id="@+id/product_name_maintain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_image_maintain"
            android:hint="@string/maintain_product_name"
            android:textAlignment="center"
            android:textSize="18dp"
            android:padding="12dp"
            android:layout_margin="5dp"
            android:background="@drawable/input_design"
            android:textColor="@color/colorPrimary"/>


        <EditText
            android:id="@+id/product_price_maintain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_name_maintain"
            android:hint="@string/maintain_product_price"
            android:textAlignment="center"
            android:textSize="18dp"
            android:padding="12dp"
            android:layout_margin="5dp"
            android:background="@drawable/input_design"
            android:textColor="@color/colorPrimary"/>

        <EditText
            android:id="@+id/product_description_maintain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_price_maintain"
            android:layout_marginTop="2dp"
            android:hint="@string/maintain_product_description"
            android:textAlignment="center"
            android:textSize="16dp"
            android:padding="12dp"
            android:layout_margin="5dp"
            android:background="@drawable/input_design"
            android:textColor="@color/colorPrimary"/>

        <Button
            android:id="@+id/apply_changes_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_description_maintain"
            android:layout_marginTop="2dp"
            android:text="@string/apply_changes_btn"
            android:textAlignment="center"
            android:textSize="18dp"
            android:padding="12dp"
            android:layout_margin="5dp"
            android:background="@drawable/buttons"
            android:textColor="@android:color/white"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>