<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sellers.SellerHomeActivity">

    <RelativeLayout
        android:id="@+id/re1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unverify"
            android:textColor="@android:color/white"
            android:textSize="19dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            tools:ignore="NotSibling">
        </TextView>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/seller_Home_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/re1"
        android:layout_above="@+id/seller_add_product"
        tools:ignore="NotSibling">

    </androidx.recyclerview.widget.RecyclerView>


    <Button
        android:id="@+id/seller_add_product"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@id/seller_logout"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttons"
        android:padding="10dp"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:text="@string/sellerAdd"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/seller_logout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttons"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:padding="10dp"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:text="@string/sellerLogout"
        android:textColor="@android:color/white"/>

</RelativeLayout>