<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome4"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp"
        android:src="@drawable/app_logo" />

    <TextView
        android:id="@+id/app_slogoname"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="85dp"
        android:layout_marginTop="100dp"
        android:text="@string/appMoto"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold|italic"/>



    <Button
        android:id="@+id/main_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seller_begin"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttons"
        android:padding="20dp"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:text="@string/Alredy"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/main_join_now_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/main_login_btn"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:text="@string/join"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/seller_begin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Needs to become a Seller?"
        android:textSize="18dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold|italic"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="19dp"
        android:layout_marginBottom="10dp"
        />

</RelativeLayout>